# c3pzero

./: .env  Dockerfile  README.md  compose.dev.yml  upstream.repos
.github/workflows/: ci.yaml
bringup/: CMakeLists.txt  package.xml
bringup/launch/: c3pzero_launch.py
c3pzero_base_config/: CMakeLists.txt  package.xml
c3pzero_base_config/config/: base_config.yaml  cameras.yaml
c3pzero_base_config/config/moveit/: kinova_gen3_servo.yaml  sensors_3d.yaml
c3pzero_base_config/launch/: hardware.launch.py
c3pzero_base_config/objectives/: README.md
c3pzero_behaviors/: CMakeLists.txt  c3pzero_behaviors_plugin_description.xml  package.xml
c3pzero_behaviors/include/c3pzero_behaviors/: nav_to_goal_pose.hpp
c3pzero_behaviors/src/: nav_to_goal_pose.cpp  register_behaviors.cpp
c3pzero_behaviors/test/: CMakeLists.txt  test_load_behavior_plugins.cpp
c3pzero_bringup/: CMakeLists.txt  README.md  package.xml
c3pzero_bringup/launch/: c3pzero_launch.py
c3pzero_bringup/params/: angular_filter.yaml
c3pzero_description/: CMakeLists.txt  README.md  package.xml
c3pzero_description/config/: c3pzero_controllers.yaml
c3pzero_description/launch/: view_robot_base.launch.py
c3pzero_description/rviz/: view_robot_base.rviz
c3pzero_description/urdf/: c3pzero_base.ros2_control.xacro  c3pzero_base.xacro
c3pzero_description/urdf/meshes/: c300_base_link.dae  wheel_link.dae
c3pzero_driver/: package.xml  setup.cfg  setup.py
c3pzero_driver/c3pzero_driver/: diff_drive_odom.py  roboclaw_3.py  twist2roboclaw.py
c3pzero_driver/launch/: driver.launch.py  teleop.launch.py
c3pzero_hackathon_config/: CMakeLists.txt  package.xml
c3pzero_hackathon_config/config/: site_config.yaml
c3pzero_ignition/: CMakeLists.txt  README.md  package.xml
c3pzero_ignition/launch/: ignition.launch.py  spawn_robot.launch.py
c3pzero_ignition/rviz/: ignition.rviz
c3pzero_ignition/src/: odom2tf_broadcaster_node.cpp
c3pzero_ignition/worlds/: empty_world.sdf  house_world.sdf  simple_world.sdf  warehouse_world.sdf
c3pzero_navigation/: CMakeLists.txt  README.md  package.xml
c3pzero_navigation/launch/: navigation.launch.py
c3pzero_navigation/map/: empty_world.yaml  house.yaml
c3pzero_navigation/params/: nav2_params.yaml
c3pzero_navigation/rviz/: navigation.rviz
infrastructure/colcon-mixin/: clang-14.mixin  index.yaml
