<?xml version="1.0"?>
<package format="3">
  <name>c3pzero_behaviors</name>
  <version>0.0.0</version>
  <description>Behaviors for c3pzero</description>

  <maintainer email="joe.schornak@gmail.com">Joe Schornak</maintainer>
  <author email="joe.schornak@gmail.com">Joe Schornak</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_common</build_depend>

  <depend>moveit_studio_behavior_interface</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
