<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c3pzero_ignition</name>
  <version>1.0.0</version>
  <description>Ignition worlds, models and launch files for c3pzero robot</description>
  <maintainer email="vatan@picknik.ai">tezer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>c3pzero_description</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
