<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c3pzero_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 parameters for c3pzero_siteconfig</description>
  <maintainer email="bilal.gill@picknik.ai">Bilal Gill</maintainer>
  <license>Unlicense</license>
  <url type="website">https://github.com/PickNikRobotics/c3pzero_siteconfig</url>
  <url type="repository">https://github.com/PickNikRobotics/c3pzero_siteconfig</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/c3pzero_siteconfig/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
